Move "Enable native popups" option and make advanced (#1037)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -136,10 +136,6 @@
                     <label><input type="checkbox" id="enable" data-setting="general.enable"> Enable content scanning</label>
                 </div>
 
-                <div class="checkbox ignore-form-changes" data-hide-for-browser="firefox-mobile">
-                    <label><input type="checkbox" id="enable-clipboard-popups"> Enable native popups when copying Japanese text</label>
-                </div>
-
                 <div class="checkbox">
                     <label><input type="checkbox" id="show-usage-guide" data-setting="general.showGuide"> Show usage guide on startup</label>
                 </div>
@@ -154,6 +150,10 @@
 
                 <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options" data-setting="general.showAdvanced" data-transform-pre="setDocumentAttribute" data-transform-post="setDocumentAttribute" data-document-attribute="data-options-general-show-advanced"> Show advanced options</label>
+                </div>
+
+                <div class="checkbox options-advanced ignore-form-changes" data-hide-for-browser="firefox-mobile">
+                    <label><input type="checkbox" id="enable-clipboard-popups"> Enable native popups when copying Japanese text</label>
                 </div>
 
                 <div class="checkbox options-advanced">
