Add support for dark theme scrollbar colors (#1038)

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="content" id="content"><div class="content-body" id="content-body">
+<div class="content scrollbar" id="content"><div class="content-body" id="content-body">
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
