--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="content-outer">
-<div class="content" id="content"><div class="content-body" id="content-body">
+<div class="content scrollbar" id="content"><div class="content-body" id="content-body">
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
@@ -48,7 +48,7 @@
     </div>
 
 </div></div>
-<div class="content-sidebar" id="content-sidebar" hidden><div class="content-sidebar-inner">
+<div class="content-sidebar scrollbar" id="content-sidebar" hidden><div class="content-sidebar-inner">
     <div class="content-sidebar-top">
         <button class="sidebar-button danger" id="close-button" title="Close popup"><span class="sidebar-button-icon" data-icon="cross"></span></button>
         <button class="sidebar-button" disabled id="navigate-previous-button" title="Previous definition (Alt + B)"><span class="sidebar-button-icon" data-icon="left-chevron"></span></button>
