Update progress indicator styles (#1042)

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -17,6 +17,7 @@
 <body>
 
 <div class="content scrollbar" id="content"><div class="content-body" id="content-body">
+    <div class="top-progress-bar-container"><div class="progress-bar-indeterminant" id="progress-indicator" hidden></div></div>
     <div class="content-body-inner">
 
         <span tabindex="-1" id="content-scroll-focus"></span>
@@ -45,8 +46,6 @@
                 <button id="search-button"><span class="icon-button-icon" data-icon="magnifying-glass"></span></button>
             </div>
         </div>
-
-        <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
         <div class="scan-disable" id="query-parser-container">
             <div id="query-parser-content"></div>
