--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -17,11 +17,10 @@
 
 <div class="content-outer">
 <div class="content scrollbar" id="content"><div class="content-body" id="content-body">
+    <div class="top-progress-bar-container"><div class="progress-bar-indeterminant" id="progress-indicator" hidden></div></div>
     <div class="content-body-inner">
 
         <span tabindex="-1" id="content-scroll-focus"></span>
-
-        <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
         <div class="scan-disable" id="query-parser-container" hidden>
             <div class="search-option" id="query-parser-mode-container" hidden>
