Display and query parser layout (#1043)
* Update query parser text assignment

* Update how padding is used

* Hide query parser container by default

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="scan-disable" id="query-parser-container">
+        <div class="scan-disable" id="query-parser-container" hidden>
             <div id="query-parser-content"></div>
         </div>
 
