--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -25,7 +25,7 @@
         </div>
     </label>
     <div class="nav-button-container">
-        <button class="nav-button action-select-profile" data-icon="profile" title="Change primary profile">
+        <button class="nav-button action-select-profile" data-icon="profile" title="Change primary profile" hidden>
             <span class="profile-select-container"><select class="profile-select" id="profile-select">
                 <optgroup label="Primary Profile" id="profile-select-option-group"></optgroup>
             </select></span>
