Display scroll fixes (#1046)
* Update focus when internal focus is changed

* Update scroll layout

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="content scrollbar" id="content"><div class="content-body" id="content-body">
+<div class="content"><div class="content-scroll scrollbar" id="content-scroll"><div class="content-body" id="content-body">
     <div class="top-progress-bar-container"><div class="progress-bar-indeterminant" id="progress-indicator" hidden></div></div>
     <div class="content-body-inner">
 
@@ -60,7 +60,7 @@
         </div>
 
     </div>
-</div></div>
+</div></div></div>
 
 <!-- Scripts -->
 <script src="/mixed/lib/wanakana.min.js"></script>
