--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="content-outer">
-<div class="content scrollbar" id="content"><div class="content-body" id="content-body">
+<div class="content"><div class="content-scroll scrollbar" id="content-scroll"><div class="content-body" id="content-body">
     <div class="top-progress-bar-container"><div class="progress-bar-indeterminant" id="progress-indicator" hidden></div></div>
     <div class="content-body-inner">
 
@@ -48,7 +48,7 @@
         </div>
 
     </div>
-</div></div>
+</div></div></div>
 <div class="content-sidebar scrollbar" id="content-sidebar" hidden><div class="content-sidebar-inner">
     <div class="content-sidebar-top">
         <button class="sidebar-button danger" id="close-button" title="Close popup"><span class="sidebar-button-icon" data-icon="cross"></span></button>
