Frequency display improvements (#1060)
* Hide redundant frequencies

* Add dataset counters for unique expressions/readings

* Update frequency display to include disambiguations

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -88,7 +88,7 @@
 <template id="kanji-reading-template"><dd class="kanji-reading"></dd></template>
 
 <template id="tag-template"><span class="tag"><span class="tag-inner"></span></span></template>
-<template id="tag-frequency-template"><span class="tag" data-category="frequency"><span class="tag-inner"><span class="term-frequency-dictionary-name"></span><span class="term-frequency-separator"></span><span class="term-frequency-value"></span></span></span></template>
+<template id="tag-frequency-template"><span class="tag" data-category="frequency"><span class="tag-inner"><span class="term-frequency-disambiguation"><span class="term-frequency-disambiguation-expression"></span><span class="term-frequency-disambiguation-separator"></span><span class="term-frequency-disambiguation-reading"></span></span><span class="term-frequency-dictionary-name"></span><span class="term-frequency-separator"></span><span class="term-frequency-value"></span></span></span></template>
 <template id="tag-search-template"><span class="tag" data-category="search"></span></template>
 
 </body></html>
