Display button improvements (#1065)
* Use hidden and disabled properties instead of custom classes

* Enable transitions on buttons

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -7,9 +7,9 @@
         <div class="entry-header2">
             <div class="entry-header3">
                 <div class="actions">
-                    <button class="action-button action-view-note pending disabled" data-icon="view-note" title="View added note (Alt + V)"></button>
-                    <button class="action-button action-add-note pending disabled" data-icon="add-term-kanji" data-mode="term-kanji" title="Add expression (Alt + E)"></button>
-                    <button class="action-button action-add-note pending disabled" data-icon="add-term-kana" data-mode="term-kana" title="Add reading (Alt + R)"></button>
+                    <button class="action-button action-view-note" hidden disabled data-icon="view-note" title="View added note (Alt + V)"></button>
+                    <button class="action-button action-add-note" hidden disabled data-icon="add-term-kanji" data-mode="term-kanji" title="Add expression (Alt + E)"></button>
+                    <button class="action-button action-add-note" hidden disabled data-icon="add-term-kana" data-mode="term-kana" title="Add reading (Alt + R)"></button>
                     <button class="action-button action-play-audio" data-icon="play-audio" title="Play audio (Alt + P)"></button>
                 </div>
                 <div class="term-expression-list"></div>
@@ -60,8 +60,8 @@
         <div class="entry-header2">
             <div class="entry-header3">
                 <div class="actions">
-                    <button class="action-button action-view-note pending disabled" data-icon="view-note" title="View added note (Alt + V)"></button>
-                    <button class="action-button action-add-note pending disabled" data-icon="add-term-kanji" data-mode="kanji" title="Add Kanji (Alt + K)"></button>
+                    <button class="action-button action-view-note" hidden disabled data-icon="view-note" title="View added note (Alt + V)"></button>
+                    <button class="action-button action-add-note" hidden disabled data-icon="add-term-kanji" data-mode="kanji" title="Add Kanji (Alt + K)"></button>
                 </div>
                 <div class="kanji-glyph source-text"></div>
             </div>
