Yomichan popup styles refactor (#1067)
* Rename classes yomichan-float to yomichan-popup

* Use attributes instead of classes

* Refactor

* Update popup outer scaling

* Update outer theme usage

* Move client.css to popup-outer.css in /mixed

--- a/ext/bg/popup-preview.html
+++ b/ext/bg/popup-preview.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/bg/css/popup-preview.css">
-    <link rel="stylesheet" type="text/css" href="/fg/css/client.css" id="client-css">
+    <link rel="stylesheet" type="text/css" href="/mixed/css/popup-outer.css" id="popup-outer-css">
 </head>
 <body>
 
