Settings v2 testing setup (#1084)
* Add option for using settings v2

* Add options/info about settings v2

* Use settings v2 URL when applicable

* Update tests

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -21,6 +21,12 @@
                 <h1>Yomichan Options</h1>
             </div>
 
+            <div class="alert alert-info">
+                <a style="text-decoration: underline;" href="/bg/settings2.html">
+                    An updated version of the settings page is available for testing and feedback.
+                </a>
+            </div>
+
             <div class="profile-form ignore-form-changes">
                 <h3>Profiles</h3>
 
@@ -190,6 +196,10 @@
 
                 <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="show-debug-info" data-setting="general.debugInfo" data-transform-pre="setDocumentAttribute" data-transform-post="setDocumentAttribute" data-document-attribute="data-options-general-debug-info"> Show debug information</label>
+                </div>
+
+                <div class="checkbox options-advanced">
+                    <label><input type="checkbox" data-setting="global.useSettingsV2" data-scope="global"> Use the <a href="/bg/settings2.html">v2 settings page</a> by default</label>
                 </div>
 
                 <div class="form-group">
