--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -50,6 +50,28 @@
 
     <h1>Yomichan Settings</h1>
 
+    <h2></h2>
+    <div class="settings-group" style="border: 1px solid var(--accent-color);">
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">
+                    <strong>Notice:</strong>
+                    This new settings page is currently in beta. Questions, comments, and other feedback
+                    is welcome and can be shared
+                    <a href="https://github.com/FooSoft/yomichan/issues/1000" target="_blank" rel="noopener noreferrer">on Github</a>.
+                </div>
+            </div>
+        </div></div>
+        <div class="settings-item"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Use the v2 settings page by default</div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" data-setting="global.useSettingsV2" data-scope="global"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+            </div>
+        </div></div>
+    </div>
+
     <h2 id="profile">Profile</h2>
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
