Add initialization script for generic internal pages (#1099)

--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -196,5 +196,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </div>
 </div></div>
 
+<!-- Scripts -->
+<script src="/bg/js/generic-page-main.js"></script>
+
 </body>
 </html>
