Add info page (#1102)
* Add api.getAnkiConnectVersion

* Enable basic functionality when certain features/elements aren't present

* Add info page

* Update information links

* Update info link on the settings v2 page

--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -32,7 +32,7 @@
         </button>
         <a class="nav-button action-open-options" data-icon="cog" title="Options&#10;(Middle click to open in new tab)"></a>
         <a class="nav-button action-open-search" data-icon="magnifying-glass" title="Search (Alt + Insert)&#10;(Middle click to open in new tab)"></a>
-        <a class="nav-button action-open-help" data-icon="question-mark" title="Help"></a>
+        <a class="nav-button action-open-help" data-icon="question-mark" title="Information"></a>
     </div>
 </div>
 
