--- a/ext/bg/info.html
+++ b/ext/bg/info.html
@@ -30,6 +30,7 @@
                 <li>Extension version: <span id="version"></span></li>
                 <li>Platform: <span id="platform"></span></li>
                 <li>Browser: <span id="browser"></span></li>
+                <li>Language: <span id="language"></span></li>
                 <li>User agent: <span id="user-agent"></span></li>
                 <li>AnkiConnect version: <span id="anki-connect-version-container"><span id="anki-connect-version">...</span><em class="light" id="anki-connect-version-unknown-message" hidden> (Anki not running or connected)</em></span></li>
                 <li>Installed dictionaries: <span id="installed-dictionaries">...</span><em id="installed-dictionaries-none" hidden>None installed</em></li>
