Improve display tags (#1117)
* Update tag style

* Add styles/HTML for notifications

* Add DisplayNotification class

* Add support for tag notifications

* Simplify notification content

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -117,4 +117,10 @@
     </span>
 </span></template>
 
+<!-- Extra -->
+<template id="footer-notification-template"><div class="footer-notification">
+    <div class="footer-notification-body"></div>
+    <button class="footer-notification-close-button"><span class="footer-notification-close-button-icon"></span></button>
+</div></template>
+
 </body></html>
