--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -65,6 +65,7 @@
                 </div>
             </div>
         </div>
+        <div class="content-footer-container1"><div class="content-footer-container2"><div class="content-footer" id="content-footer"></div><div class="scrollbar-spacer scrollbar"></div></div></div>
     </div>
 </div>
 
@@ -87,6 +88,7 @@
 <script src="/mixed/js/display.js"></script>
 <script src="/mixed/js/display-generator.js"></script>
 <script src="/mixed/js/display-history.js"></script>
+<script src="/mixed/js/display-notification.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
 <script src="/mixed/js/scroll.js"></script>
