--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -52,6 +52,7 @@
                 </div>
             </div>
         </div>
+        <div class="content-footer-container1"><div class="content-footer-container2"><div class="content-footer" id="content-footer"></div><div class="scrollbar-spacer scrollbar"></div></div></div>
     </div>
     <div class="content-sidebar scrollbar" id="content-sidebar" hidden>
         <div class="content-sidebar-inner">
@@ -91,6 +92,7 @@
 <script src="/mixed/js/display.js"></script>
 <script src="/mixed/js/display-generator.js"></script>
 <script src="/mixed/js/display-history.js"></script>
+<script src="/mixed/js/display-notification.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/frame-endpoint.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
