Maximum clipboard search length (#1118)
* Add maximumClipboardSearchLength an option

* Add setting

* Add limits

* Update tests

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -399,6 +399,15 @@
                 </p>
             </div>
         </div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Maximum clipboard text search length</div>
+                <div class="settings-item-description">Limit the number of text characters used when searching clipboard content.</div>
+            </div>
+            <div class="settings-item-right">
+                <input type="number" min="0" step="1" data-setting="general.maximumClipboardSearchLength">
+            </div>
+        </div></div>
     </div>
 
     <h2 id="popup-appearance">Popup Appearance</h2>
