Display an indication when Anki field order/existence doesn't match (#1119)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1083,7 +1083,7 @@
                         </div>
 
                         <template id="anki-card-field-template"><tr>
-                            <td class="col-sm-2 anki-card-field-name"></td>
+                            <td class="col-sm-2 anki-card-field-name-container"><span class="anki-card-field-name"></span></td>
                             <td class="col-sm-10">
                                 <div class="input-group anki-card-field-value-container">
                                     <input type="text" class="anki-card-field-value form-control" data-field="" value="">
