--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2366,7 +2366,7 @@
 
 
 <!-- Anki templates -->
-<template id="anki-card-field-template"><div class="anki-card-field-name"></div>
+<template id="anki-card-field-template"><div class="anki-card-field-name-container"><span class="anki-card-field-name"></span></div>
 <div class="anki-card-field-value-container">
     <input type="text" class="anki-card-field-value input-with-suffix-button" autocomplete="off">
     <button class="anki-card-field-value-menu-button input-suffix-button input-suffix-icon-button" data-menu-position="below,left"><span class="icon-button-icon icon-button-icon-light" data-icon="material-down-arrow"></span></button>
