--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -477,6 +477,25 @@
             </div>
         </div></div>
         <div class="settings-item advanced-only">
+            <div class="settings-item-inner settings-item-inner-wrappable">
+                <div class="settings-item-left">
+                    <div class="settings-item-label">Selection indicator style</div>
+                    <div class="settings-item-description">Change how the selected definition entry is visually indicated.</div>
+                </div>
+                <div class="settings-item-right">
+                    <select data-setting="general.popupCurrentIndicatorMode">
+                        <option value="none">None</option>
+                        <option value="asterisk">Asterisk</option>
+                        <option value="triangle">Triangle</option>
+                        <option value="bar-left">Vertical bar (left)</option>
+                        <option value="bar-right">Vertical bar (right)</option>
+                        <option value="dot-left">Small dot (left)</option>
+                        <option value="dot-right">Small dot (right)</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="settings-item advanced-only">
             <div class="settings-item-inner">
                 <div class="settings-item-left">
                     <div class="settings-item-label">
