Popup action bar options (#1140)
* Add options for action bar visibility and location

* Add settings

* Update styles

* Expose properties

* Update styles

* Update tests

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -437,6 +437,34 @@
                 </div>
             </div>
         </div></div>
+        <div class="settings-item">
+            <div class="settings-item-inner settings-item-inner-wrappable">
+                <div class="settings-item-left">
+                    <div class="settings-item-label">Action bar appearance</div>
+                    <div class="settings-item-description">Control when and where the action bar is visible.</div>
+                </div>
+                <div class="settings-item-right">
+                    <div class="settings-item-group">
+                        <div class="settings-item-group-item">
+                            <div class="settings-item-group-item-label">Visibility</div>
+                            <select data-setting="general.popupActionBarVisibility" class="short-width short-height">
+                                <option value="auto">Auto</option>
+                                <option value="always">Always</option>
+                            </select>
+                        </div>
+                        <div class="settings-item-group-item">
+                            <div class="settings-item-group-item-label">Location</div>
+                            <select data-setting="general.popupActionBarLocation" class="short-width short-height">
+                                <option value="left">Left</option>
+                                <option value="right">Right</option>
+                                <option value="top">Top</option>
+                                <option value="bottom">Bottom</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Glossary layout</div>
