--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -56,8 +56,10 @@
     </div>
     <div class="content-sidebar scrollbar" id="content-sidebar" hidden>
         <div class="content-sidebar-inner">
-            <div class="content-sidebar-top">
+            <div class="content-sidebar-top-pre">
                 <button class="sidebar-button danger" id="close-button" title="Close popup"><span class="sidebar-button-icon" data-icon="cross"></span></button>
+            </div>
+            <div class="content-sidebar-top">
                 <button class="sidebar-button" disabled id="navigate-previous-button" title="Previous definition (Alt + B)"><span class="sidebar-button-icon" data-icon="left-chevron"></span></button>
                 <button class="sidebar-button" disabled id="navigate-next-button" title="Next definition (Alt + F)"><span class="sidebar-button-icon" data-icon="right-chevron"></span></button>
             </div>
