Dictionary display updates (#1146)
* Display dictionary-list as flex

* Move styles

* Move enabled toggle

* Update details

* Disable sorting based on priority

* Update styles

* Update title color when disabled

* Update display style of secondary search dictionaries

--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -19,14 +19,6 @@
     height: calc(1em * (16 / var(--font-size-default-no-units)));
     top: calc(1em * (3 / var(--font-size-default-no-units)));
 }
-.dictionary-info {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-}
-.dictionary-info-label {
-    margin-left: 1em;
-}
     </style>
 </head>
 <body>
@@ -314,7 +306,7 @@
 
 
 <!-- Dictionary templates -->
-<template id="dictionary-template"><div class="settings-item">
+<template id="dictionary-template"><div class="settings-item dictionary-item">
     <div class="settings-item-inner">
         <div class="settings-item-left">
             <div class="settings-item-label dictionary-info">
