--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -66,7 +66,7 @@
                         <div class="settings-item-label">Install or remove dictionaries</div>
                     </div>
                     <div class="settings-item-right open-panel-button-container">
-                        <button class="icon-button"><span class="icon-button-inner"><span class="icon-button-icon" data-icon="right-arrow"></span></span></button>
+                        <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
                     </div>
                 </div></div>
             </div>
@@ -184,7 +184,7 @@
                 <div class="settings-item-label">View more settings on the Settings page</div>
             </div>
             <div class="settings-item-right open-panel-button-container">
-                <button class="icon-button"><span class="icon-button-inner"><span class="icon-button-icon" data-icon="right-arrow"></span></span></button>
+                <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
             </div>
         </div></a>
     </div>
@@ -315,7 +315,7 @@
             </div>
         </div>
         <div class="settings-item-right">
-            <button class="icon-button dictionary-menu-button" data-menu="dictionary-menu" data-menu-position="below,left"><span class="icon-button-inner"><span class="icon-button-icon" data-icon="kebab-menu"></span></span></button>
+            <button class="icon-button dictionary-menu-button" data-menu="dictionary-menu" data-menu-position="below,left"><span class="icon-button-inner"><span class="icon" data-icon="kebab-menu"></span></span></button>
         </div>
     </div>
 </div></template>
